# ChangeLog for dev-perl/DateTime-TimeZone
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.110 2009/09/29 08:37:53 tove Exp $

*DateTime-TimeZone-0.99 (29 Sep 2009)

  29 Sep 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.99.ebuild:
  Version bump

*DateTime-TimeZone-0.98 (13 Sep 2009)

  13 Sep 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.98.ebuild:
  Version bump

*DateTime-TimeZone-0.97 (09 Sep 2009)

  09 Sep 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.97.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.91.ebuild, -DateTime-TimeZone-0.93.ebuild,
  -DateTime-TimeZone-0.95.ebuild:
  Cleanup

*DateTime-TimeZone-0.96 (22 Aug 2009)

  22 Aug 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.96.ebuild:
  Version bump

*DateTime-TimeZone-0.95 (18 Aug 2009)

  18 Aug 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.95.ebuild:
  Version bump

*DateTime-TimeZone-0.93 (21 Jul 2009)

  21 Jul 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.93.ebuild:
  Version bump

  16 Jul 2009; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.89.ebuild, -DateTime-TimeZone-0.90.ebuild:
  Cleanup

*DateTime-TimeZone-0.91 (28 May 2009)

  28 May 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.91.ebuild:
  Version bump

  01 May 2009; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.83.01.ebuild, -DateTime-TimeZone-0.84.ebuild,
  -DateTime-TimeZone-0.85.ebuild, -DateTime-TimeZone-0.86.ebuild,
  -DateTime-TimeZone-0.88.ebuild:
  Cleanup

*DateTime-TimeZone-0.90 (27 Apr 2009)

  27 Apr 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.90.ebuild:
  Version bump

*DateTime-TimeZone-0.89 (14 Apr 2009)

  14 Apr 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.89.ebuild:
  Version bump
