@@ -1,10 +1,6 @@
-DIST DateTime-TimeZone-0.96.tar.gz 510341 RMD160 510275520e175d9b3127633b69ffaa57b2e5ccb8 SHA1 c124b6dbd6a57788e95b73b63a2dd0e42bb76fa9 SHA256 9d1d10d57628376da5d2903102bb4bd14e9f569a9f071626fdef81c54c3dc640
-DIST DateTime-TimeZone-0.97.tar.gz 511658 RMD160 6f615c1251bb1a19e8a2dab2f45db806cb127c4c SHA1 7ba676ba8a96d7add2dcadb0f94936708c1a3bb3 SHA256 0948b15e750ac6a72def96db105028d087ded4f923cfec5e321be2d8f941135f
-DIST DateTime-TimeZone-0.98.tar.gz 510585 RMD160 958bd1cf5424bf30de9b9f92309668b648046298 SHA1 ffe4fdaed9e6745b4368adf4b28ebb8fcfc314e7 SHA256 910aee82a9f6aba91366793c6a14b8bf67476ced766742013071dce75dae6f1f
 DIST DateTime-TimeZone-0.99.tar.gz 510287 RMD160 c56b7d4ca5f7fbfe5df38e629a3236ded750b005 SHA1 6b33cc2b8ad0379921a2a5ecaab80740b9119ab5 SHA256 4ababbe132c24304f416065f1ab3341bcd878be61793e5f8b4b12e344a6168e9
-EBUILD DateTime-TimeZone-0.96.ebuild 708 RMD160 a8f7047a254ae3cddb08f9c30b3b0b457fb4e82b SHA1 ce77910f767545315535f9e44f6fefee3598c65d SHA256 95b2a67344d1ab5558123640c9ceb3bbac8953916f31b4ae3b7c80f2d70f8efe
-EBUILD DateTime-TimeZone-0.97.ebuild 708 RMD160 1f90dc91705ef1a68b4c211e8b2b6362c0f3eeb9 SHA1 7643edaad4c7715120fb7c5606dcc23913c2ee03 SHA256 e584b1254ddf62fd6df7bf9d7e668d9bb5bf7b6f3056a0d18230e7278aba4ab0
-EBUILD DateTime-TimeZone-0.98.ebuild 708 RMD160 4d0f387ea6bfcfd95d209c9c0ea6d1e42ec55ba0 SHA1 f1d969a5e114554470244d4c089d866a138264ca SHA256 a3391a82c54aa9a7add0faa73709e05c93dcf8568978c14103c889149eae07ba
+DIST DateTime-TimeZone-1.00.tar.gz 507709 RMD160 9de92e6dea4f1b6cf6f6611634f710277bac2593 SHA1 714bf39fdb83897fef2f1f5f369c800c8fbf8b31 SHA256 865fb2d290c0043b6ab04b06106e2108c305bdc236ca5c94587e09c265379cfb
 EBUILD DateTime-TimeZone-0.99.ebuild 708 RMD160 b771a9b8e36fd7170087941530f7944dcf1826a2 SHA1 d8d22eb2104bb3341ef20431c82f6229fa2d34b7 SHA256 afac291fe8f2fd7868319167bba9247b97c7f4688af9010badd9290980ab0f20
-MISC ChangeLog 16099 RMD160 0ba0060f0af2c93f8aa44b12bdddff3b5b10406a SHA1 10cc2a6d908935e000b11ee8974c0ec2ab686328 SHA256 e5592a5330ec2847f63a16fe0fb2144e292a870be8e87ec9ba2c2297e7c69b09
+EBUILD DateTime-TimeZone-1.00.ebuild 708 RMD160 b2ea681f08a1e435f1e8cb5762f88c550cb81341 SHA1 9a4d9ac19dce0c7cc5628e04e85c7fbb5edc643e SHA256 7908978b0fc301a8974c38b85d1052076dd69c305f719f025c01872f5ad5ab72
+MISC ChangeLog 16395 RMD160 bf3d2e689870f23f15482616ec77136262434fc7 SHA1 277544551be98d7c53ba2e44a31a4cdd040ce9b4 SHA256 4e7764aed7e249c869cfa252698fe08781c891260442a1e8157f44ded08ffba8
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
