@@ -1,6 +1,17 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.110 2009/09/29 08:37:53 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.112 2009/10/18 11:19:10 tove Exp $
+
+*DateTime-TimeZone-1.00 (18 Oct 2009)
+
+  18 Oct 2009; Torsten Veller <tove@gentoo.org>
+  +DateTime-TimeZone-1.00.ebuild:
+  Version bump
+
+  12 Oct 2009; Torsten Veller <tove@gentoo.org>
+  -DateTime-TimeZone-0.96.ebuild, -DateTime-TimeZone-0.97.ebuild,
+  -DateTime-TimeZone-0.98.ebuild:
+  Cleanup
 
 *DateTime-TimeZone-0.99 (29 Sep 2009)
 
